force-app/main/default/objects/geopointe__GP_Demographics__c/geopointe__GP_Demographics__c.object-meta.xml
<CustomObject>
    <label>Geopointe Demographics</label>
    <nameField>
        <label>Demographics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Demographics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>