force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Fill_Opacity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Fill_Opacity__c</fullName>
    <label>Fill Opacity</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>