force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geopointe Folder</label>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipName>Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>