force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Granularity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Granularity__c</fullName>
    <label>Granularity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>