force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Max_Value__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Max_Value__c</fullName>
    <label>Max Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>