force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Metric__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Metric__c</fullName>
    <label>Metric</label>
    <length>50</length>
    <type>Text</type>
</CustomField>