force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Min_Value__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Min_Value__c</fullName>
    <label>Min Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>