force-app/main/default/objects/geopointe__GP_Demographics__c/fields/geopointe__Personal__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal</label>
    <type>Checkbox</type>
</CustomField>